--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.application.name=gc-${spring.profiles.active}
 logging.level.io.axoniq.demo=debug
 
 # We look for Axon Server locally, unless we find a PCF Binding for AxonServer
-axon.axonserver.servers=${vcap.services.AxonServer.credentials.uri:localhost}
+axon.axonserver.servers=end2.sandbox.axon.odj.cloud:443
+## ${vcap.services.AxonServer.credentials.uri:localhost}
 
 # The default is to have no Servlets
 spring.main.web-application-type=none
